# tridomino

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  work.py
src/tridomino2/: __about__.py  __main__.py  board.py  demo.py  search.py  work.py
src/tridomino2/cli/: __init__.py
tests/: __init__.py  test_gameboard.py
